--- a/src/component/RegisterLogin.css
+++ b/src/component/RegisterLogin.css
@@ -39,7 +39,7 @@
     cursor: pointer;
 }
 .login-btn{
-    padding: 6px 16px;
+    padding: 8px 18px;
     position: absolute;
     top: 2rem;
     right: 2rem;
@@ -47,6 +47,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 18px;
 }
 
 /* loginModel */
